--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Portfolio CI
+
 on:
   push:
     branches: [ master ]
@@ -9,11 +10,22 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node
+      - name: Checkout del código
+        uses: actions/checkout@v4
+
+      - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm install
-      - [cite_start]run: npm test      # Ejecuta tus pruebas de QA 
-      - run: npm run build # Valida que el proyecto compila
+
+      - name: Instalar dependencias
+        run: npm install
+
+      - name: Ejecutar Linter
+        run: npm run lint
+
+      - name: Ejecutar pruebas de QA
+        run: npm test
+
+      - name: Validar compilación (Build)
+        run: npm run build
