feat: enhance CI/CD workflow and update Vite configuration for GitHub Pages deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,68 @@
-name: Portfolio CI
+name: Portfolio CI/CD
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: true
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: arlinton-portfolio
     steps:
-      - name: Checkout del código
+      - name: Checkout del codigo
         uses: actions/checkout@v4
 
       - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+          cache: npm
+          cache-dependency-path: arlinton-portfolio/package-lock.json
+
+      - name: Configurar GitHub Pages
+        if: github.event_name == 'push'
+        uses: actions/configure-pages@v5
 
       - name: Instalar dependencias
-        run: npm install
+        run: npm ci
 
       - name: Ejecutar Linter
         run: npm run lint
 
       - name: Ejecutar pruebas de QA
-        run: npm test
+        run: npm test -- --run
 
-      - name: Validar compilación (Build)
+      - name: Compilar proyecto
         run: npm run build
+
+      - name: Subir artefacto de Pages
+        if: github.event_name == 'push'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: arlinton-portfolio/dist
+
+  deploy:
+    if: github.event_name == 'push'
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Desplegar en GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
